# trends_analyzer_ytb

./: Claude.md  README.md  channel.db  functions.py  main.py  models.py  oldfunctions.py  pyproject.toml
app/: main.py  stats.py
app/static/css/: style.css
app/templates/: channels.html  index.html  results.html  statistics.html
notebooks/: analysis.py  db_conn.py
notebooks/__marimo__/session/: analysis.py.json  db_conn.py.json  db_conn.py.py.json
